# full-stack-fastapi-template

./: .env  .gitignore  API_ARCHITECTURE_REVIEW.md  API_REVIEW_QUESTIONS.md  ARCHITECTURE.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CODEBASE_REVIEW_AND_REFACTOR.md  CODE_CLEANUP_SUMMARY.md  CODE_REVIEW.md  DEVELOPMENT_SETUP.md  DOCUMENT_COMPARISON_SETUP.md  DOCUMENT_PROCESSING_README.md  FILE_MANAGEMENT_IMPLEMENTATION.md  HUONG_DAN_DOC_LAP.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_DOCUMENT_COMPARISON.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  KIEM_TRA_DOC_LAP.md  LAYOUT_REFACTORING.md  LIBRARIES_AND_SERVICES.md  MINIO_MIGRATION_GUIDE.md  OPTIMIZATION_DOCUMENT_COMPARISON.md  OPTIMIZATION_SUMMARY.md  PR_DESCRIPTION.md  QUICK_START.md  QUICK_START_DEVELOPMENT.md  README.md  REFACTORING_SUMMARY.md  SECURITY.md  SOLUTIONS_IMPLEMENTATION.md  STANDALONE_SETUP.md  STREAMING_VS_TEMP_COMPARISON.md  SUBMISSION_MANAGEMENT_IMPLEMENTATION.md  TOI_UU_HOA_API_COMPARE.md  copier.yml  deployment.md  development.md  docker-compose.override.yml  (+2 more)
backend/: .env  .env.example  .gitignore  BASE_SUMMARY.md  Dockerfile  IMPROVEMENTS.md  README.md  SUBMISSION_API.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml
backend/app/: main.py  models.py
backend/app/alembic/: README.md  env.py
backend/app/api/: dependencies.py  main.py
backend/app/core/: config.py  constants.py  context_managers.py  database.py  db.py  logging.py  resilience.py  security.py
backend/app/crud/: __init__.py  document.py  file.py  item.py  submission.py  user.py
backend/app/examples/: __init__.py  document_processing_example.py
backend/app/exceptions/: __init__.py
backend/app/middleware/: __init__.py  rate_limit.py
backend/app/models/: __init__.py  document.py  file.py  item.py  submission.py  user.py
backend/app/schemas/: __init__.py  common.py  document.py  file.py  item.py  submission.py  user.py
backend/scripts/: init_minio.py  prestart.sh  tests-start.sh
frontend/: README.md  (+2 more)
(+122 files in other folders)
